@@ -1,3 +1,10 @@
+2016-03-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gparchive.c:
+    bugfix
+
+  * libgputils/gpcofflink.c:
+    Code simplification.
+
 2016-03-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/*, gputils/*, libgputils/*:
     Code formatting.
